<resources>
    <string name="app_name">KotlinNoteEditor</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlin Notes</string>
    <string name="nav_header_subtitle">attahemma-ktx@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="send_menu_item">Send</string>
    <string name="share_menu_item">Share</string>
    <string name="communicate_menu_section">Communicate</string>

    <string name="reminder_body">Review %1$s</string>
    <string name="appwidget_text">Notes</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">List of notes</string>
    
    <string-array name="note_color_array">
        <item>#E57373</item>
        <item>#BA68C8</item>
        <item>#64B5F6</item>
        <item>#81C784</item>
        <item>#FFF176</item>
        <item>#FFB74D</item>
        <item>#90A4AE</item>
    </string-array>
</resources>